# image-convert

./: .gitignore  README.md  build.py  convert_images.py  converter.py  index.html  main.py  package-lock.json  package.json  requirements.txt
.github/workflows/: ci.yml  release.yml
app/: convert_images.py  window.py
scripts/: build.py
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: converter.rs  main.rs
